# slack_extract_web

./: .env.example  .gitignore  .windsurfrules  README.md  pyproject.toml  pytest.ini  requirements.txt  tech_spec.md  vercel.json
api/: main.py
api/auth/: password_auth.py
api/models/: schemas.py
api/routes/: download.py  extract.py  files.py  health.py
api/services/: slack_download.py  slack_extract.py
api/utils/: helpers.py  memory_storage.py
frontend/: index.html
scripts/: run_local_api.sh  test_content_api.sh  test_local_api.sh  test_vercel_memory.sh
scripts/debugging_tools/: test_api_endpoints.py  test_slack_api.py
tests/: README.md  conftest.py  test_memory_storage.py
tests/e2e/: test_api_endpoints.py
tests/mocks/: api_mocks.py
tests/unit/: test_auth.py  test_files.py  test_slack_download.py  test_slack_extract.py
